deploy/kubernetes-learning/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clipper
  labels:
    app.kubernetes.io/part-of: klipcut
